--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ main {
     height: 80vh;
     max-width: 40rem;
     min-width: 32rem;
-    margin: 0 auto;
+    margin: 1rem auto;
 }
 
 .upper-section {
@@ -73,7 +73,7 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #ECFDF5;
+    background-color: #A7F3D0;
     width: 100%;
     padding: 1rem;
     border-radius: 0 0 0.5rem 0.5rem;
@@ -97,7 +97,8 @@ p {
     text-align: center;
 }
 
-footer {
+.footer {
     text-align: center;
-    margin: 0;
+    margin: 1rem;
+    width: fit-content;
 }
